# bughunterv2

./: CLAUDE.md  commit_fix.py  config.yaml  diagnose.py  fix.py  pyproject.toml
.manual-test/: stack.txt
.understand-anything/: .understandignore  fingerprints.json  meta.json
.understand-anything/.trash-1782021279/: assemble-review.json  assembled-graph.json  batch-1.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batch-7.json  batch-8.json  batches.json  fingerprint-input.json  layers.json  review.json  tour.json
bughunterv2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: README.md  glossary.md  roadmap.md
docs/adr/: 0001-project-foundation-decisions.md  0002-diagnosis-backtrace-loop.md  0003-m2-fix-isolation-strategy.md  0004-svn-clean-cache-isolation-strategy.md
docs/standards/: collaboration.md  doc-convention.md  tool-contract.md
src/: config.py  models.py  report_writer.py  runtime_noise.py  source_index.py  stack_parser.py
src/agent/: diagnosis_agent.py  fix_agent.py  fix_prompts.py  prompts.py
src/commit/: patcher.py  svn.py
src/tools/: _command_runner.py  apply_fix.py  find_callers.py  read_source.py  run_build.py  run_tests.py
tests/: test_commit_fix.py  test_config.py  test_fix_agent.py  test_fix_tools.py  test_integration.py  test_patcher.py  test_prompts.py  test_source_index.py  test_stack_parser.py  test_svn.py  test_tools.py
tests/fixtures/: stack_trace.txt
workspace/diagnosis/: 06b3ab80-9cfa-4cf9-86b2-d96fe6953568.json  333f2c38-a0ad-4570-afe2-6d97c66a16a4.json  (+2 more)
(+49 files in other folders)
